--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
                 <div class="mb-3">
                     <input class="form-control" type="file" name="file" required>
                 </div>
+                <div class="mb-3">
+                    <input class="form-control" type="text" name="telegramId" placeholder="Enter your Telegram ID" required>
+                </div>
                 <button class="btn btn-primary w-100" type="submit">Upload & Remove Duplicates</button>
             </form>
             <p class="mt-3 text-muted text-center">Allowed: .txt, .csv only</p>
